--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
 
     <div class="col-9" style="background-color: #f1f2ff">
       <!-------------------------------------------------------------------------------------------------------- Left Portion-->
-      <!-- Time Date & Toggle-->
-
+      <!---------------------------------------------------------- Time Date & Toggle-->
       <div class="row">
         <div class="col-9">
-          <h1><b>10:11&nbsp;PM</b></h1>
+          <h1 class="rightTop"><b>10:11&nbsp;AM</b></h1>
         </div>
-        <div class="col-3">
+        <div class="col-3" style="text-align: center; margin-top: 3%; margin-bottom: 0%;">
           <!--Day Night Toggler-->
-
-          <div class="switch">
-          <input type="checkbox" name="toggle">
-          <label for="toggle">
-          <i class="bulb">
-            <span class="bulb-center"></span>
-            <span class="filament-1"></span>
-            <span class="filament-2"></span>
-            <span class="reflections">
-              <span></span>
-            </span>
-            <span class="sparks">
-              <i class="spark1"></i>
-              <i class="spark2"></i>
-              <i class="spark3"></i>
-              <i class="spark4"></i>
-            </span>
-          </i>
-        </label>
-      </div>
-
-
+          <input type="checkbox" id="toggle_checkbox">
+          <label for="toggle_checkbox">
+            <div id="star">
+              <div class="star" id="star-1">★</div>
+              <div class="star" id="star-2">★</div>
+            </div>
+            <div id="moon"></div>
+          </label>
         </div>
+      </div>
+      <!----------------------------------------------------------- Date Widget-->
+      <div class="row">
+        <h3 class="rightDate"><b>Tuesday, 07 December, 2021</b></h3>
+      </div>
+      <!----------------------------------------------------------- Name Display-->
+      <div class="row">
+        <h2 class="rightGreet"><b><i class="far fa-sun"></i>&nbsp;Good morning, Siddhartha!</b></h2>
+      </div>
+      <!----------------------------------------------------------- Navbar-->
+      <div class="icon-bar" style="margin-top: auto; margin-bottom: auto;">
+
+        <a href="#" class="iconroundup"><i class="far fa-window-restore"></i></a>
+        <a href="#" class="icontake"><i class="fas fa-map-marker-alt"></i></a>
+        <a href="#" class="icontake"><i class="fas fa-chart-bar"></i></a>
+        <a href="#" class="icontake"><i class="fas fa-thermometer-three-quarters"></i></a>
+        <a href="#" class="icontake"><i class="far fa-calendar-check" style="user-select: auto;"></i></a>
+        <a href="#" class="iconroundbtm"><i class="fas fa-cog" style="user-select: auto;"></i></a>
 
       </div>
-
     </div>
-
-
 
     <div class="col-3">
       <!--------------------------------------------------------------------------------------------------------- Right Portion-->
@@ -75,7 +75,6 @@
           </container>
         </div>
       </div>
-
       <!---------------------------------------------------------------------------- Card 1 on RIght Hand side-->
       <div class="row">
         <div class="rainCard">
@@ -98,7 +97,8 @@
           <!-- Other Info with day-->
           <div style="text-align: center;">
             <h4><b>Tuesday</b></h4><br>
-            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; | &nbsp;19&nbsp;km/h</b></h5>
+            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; |
+                &nbsp;19&nbsp;km/h</b></h5>
             <h5><b><i class="fas fa-tint"></i>&nbsp;Hum &nbsp; | &nbsp;22&nbsp;&percnt;</b></h5><br>
           </div>
         </div>
@@ -109,7 +109,8 @@
         <br>
         <div class="row">
           <div class="col-8" style="text-align: center;">
-            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; | &nbsp; 17&nbsp;km/h</b></h5>
+            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; | &nbsp;
+                17&nbsp;km/h</b></h5>
           </div>
           <div class="col-4" style="text-align: center;">
             <h5><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;<b>Delhi</b></h5><br>
@@ -131,7 +132,8 @@
         <br>
         <div class="row">
           <div class="col-8" style="text-align: center;">
-            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; | &nbsp; 22&nbsp;km/h</b></h5>
+            <h5><b>&nbsp;&nbsp;&nbsp;<i class="fa fa-wind" aria-hidden="true"></i>&nbsp;Wind &nbsp; | &nbsp;
+                22&nbsp;km/h</b></h5>
           </div>
           <div class="col-4" style="text-align: center;">
             <h5><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;<b>NY</b></h5><br>
@@ -150,7 +152,7 @@
 
 
     </div>
-
+  </div>
 </body>
 
 </html>
