--- a/index.html
+++ b/index.html
@@ -42,6 +42,218 @@
       <div class="row">
         <h2 class="rightGreet"><b><i class="far fa-sun"></i>&nbsp;Good morning, Siddhartha!</b></h2>
       </div>
+
+      <!----------------------------------------------------------- Day Cards-->
+      <div class="row" style="margin-top: 3%;">
+        <!--------------------------- Sunday-->
+        <div class="card" style="margin-left: 8%; border-radius: 35px;">
+          <img class="wIcon" src="Resources/rainSun.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Sun</b></h4>
+            <h5><b>28&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Monday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/thunder.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Mon</b></h4>
+            <h5><b>17&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Tuesday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/mist.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Tue</b></h4>
+            <h5><b>20&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Wednesday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/moon.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Wed</b></h4>
+            <h5><b>29&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Thursday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/foggy.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Thu</b></h4>
+            <h5><b>22&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Friday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/thunder.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Fri</b></h4>
+            <h5><b>16&deg;</b></h5>
+          </div>
+        </div>
+        <!--------------------------- Saturday-->
+        <div class="card" style="border-radius: 35px;">
+          <img class="wIcon" src="Resources/sun.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4><b>Sat</b></h4>
+            <h5><b>20&deg;</b></h5>
+          </div>
+        </div>
+      </div>
+
+      <!--------------------------------------------------------------------- Details Card-->
+      <div class="row">
+
+        <div class="col-6">
+        <!------------------------------------------------------------ First Card-->
+        <div class="row" style="margin-left: 8%; margin-top: 3%;">
+          <div class="row, wCard">
+            <div class="row">
+              <div class="col-9">
+                <h2 style="color: #4a4162; margin-left: 8%; margin-top: 8%; margin-bottom: 5%;"><b>Air Quality Index</b></h2>
+              </div>
+              <div class="col-3">
+                <h2 style="color: #ccc8da; font-size: 1.5em; margin-right: 15%; margin-top: 20%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Howrah</b></h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-9">
+                <h3 class="airQ"><i class="fas fa-wind"></i>&nbsp;Good</h3>
+                <h5 style="color: #d3cede; margin-left: 10%; margin-bottom: 8%;"><b>A perfect day for a Walk!</b></h5>
+              </div>
+              <div class="col-3"> 
+                <button class="rfBtn">Refresh</button>
+              </div>
+            </div>
+            <div class="row">
+              <!-- PM2-->
+              <div class="styleVal" style="margin-left: auto;">
+                <div class="inCard"><br>
+                  <h5><b>9.3</b></h5>
+                  <h6><b>PM2</b></h6><br>
+                </div>    
+              </div>
+              <!-- PM10-->
+              <div class="styleVal">
+                <div class="inCard"><br>
+                  <h5><b>12.2</b></h5>
+                  <h6><b>PM10</b></h6><br>
+                </div>    
+              </div>
+              <!-- SO2-->
+              <div class="styleVal">
+                <div class="inCard"><br>
+                  <h5><b>4.8</b></h5>
+                  <h6><b>SO2</b></h6><br>
+                </div>    
+              </div>
+              <!-- NO2-->
+              <div class="styleVal">
+                <div class="inCard"><br>
+                  <h5><b>4.6</b></h5>
+                  <h6><b>NO2</b></h6><br>
+                </div>    
+              </div>
+              <!-- O2-->
+              <div class="styleVal">
+                <div class="inCard"><br>
+                  <h5><b>6.5</b></h5>
+                  <h6><b>O2</b></h6><br>
+                </div>    
+              </div>
+              <!-- CO-->
+              <div class="styleVal" style="margin-right: auto;">
+                <div class="inCard"><br>
+                  <h5><b>0.9</b></h5>
+                  <h6><b>CO</b></h6><br>
+                </div>    
+              </div>
+            </div>
+          </div>
+        </div>
+        <!----------------------------------------------------------- Second Card-->
+        <div class="row">
+          <div class="wCard" style="margin-left: 15%; margin-top: 5%">
+            <div style="margin-bottom: 5%;"><br>
+              <h1 style="color: #4a4162; margin-left: 5%; font-size: 2em;"><b>Rain Data</b></h1>
+            </div>
+            <div class="row">
+              <div class="col-2" style="margin-left: 12%;">
+                <div class="progress progress-bar-vertical">
+                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 30%;"> </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="progress progress-bar-vertical">
+                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 50%;"> </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="progress progress-bar-vertical">
+                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 80%;"> </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="progress progress-bar-vertical">
+                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 40%;"> </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="progress progress-bar-vertical">
+                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 50%;"> </div>
+                </div>
+              </div>
+              <div class="col-2"></div>
+            </div><br>
+          </div>
+        </div>
+          
+        </div>
+        <!------------------------------------------------------------------- Third Card-->
+        <div class="col-6">
+          <div class="tCard">
+            <div class="row">
+              <h3 style="color: #5d5570; margin-left: 8%; margin-top: 3%; margin-bottom: 8%;"><b>Sunrise&nbsp;&#38;&nbsp;Sunset</b></h3>
+            </div>
+
+            <div class="row, midCard">
+              <div class="row">
+                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Kolkata</b></h3>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
+                  <h1 style="color: #8884d9; margin-left: 20%;"><b>4:40&nbsp;AM</b></h1>
+                </div>
+                <div class="col-6">
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
+                  <h1 style="color: #8884d9; margin-left: 20%;"><b>6:53&nbsp;PM</b></h1><br>
+                </div>
+              </div>
+            </div>
+
+            <div class="row, midCard">
+              <div class="row">
+                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Tokyo</b></h3>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
+                  <h1 style="color: #8884d9; margin-left: 20%;"><b>4:47&nbsp;AM</b></h1>
+                </div>
+                <div class="col-6">
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
+                  <h1 style="color: #8884d9; margin-left: 20%;"><b>6:49&nbsp;PM</b></h1><br>
+                </div>
+              </div>
+            </div><br>
+          </div>
+        </div>
+      </div>
+
+
       <!----------------------------------------------------------- Navbar-->
       <div class="icon-bar" style="margin-top: auto; margin-bottom: auto;">
 
@@ -53,10 +265,15 @@
         <a href="#" class="iconroundbtm"><i class="fas fa-cog" style="user-select: auto;"></i></a>
 
       </div>
-    </div>
 
+
+      <div><br><br></div>
+
+    </div>
+    
+
+    <!--------------------------------------------------------------------------------------------------------- Right Portion-->
     <div class="col-3">
-      <!--------------------------------------------------------------------------------------------------------- Right Portion-->
 
       <div class="row">
         <!------------------------------------------------------------------------- Holding the Search Bar-->
@@ -154,5 +371,4 @@
     </div>
   </div>
 </body>
-
 </html>
