--- a/index.html
+++ b/index.html
@@ -107,128 +107,139 @@
       <div class="row">
 
         <div class="col-6">
-        <!------------------------------------------------------------ First Card-->
-        <div class="row" style="margin-left: 8%; margin-top: 3%;">
-          <div class="row, wCard">
-            <div class="row">
-              <div class="col-9">
-                <h2 style="color: #4a4162; margin-left: 8%; margin-top: 8%; margin-bottom: 5%;"><b>Air Quality Index</b></h2>
+          <!------------------------------------------------------------ First Card-->
+          <div class="row" style="margin-left: 8%; margin-top: 3%;">
+            <div class="row, wCard">
+              <div class="row">
+                <div class="col-9">
+                  <h2 style="color: #4a4162; margin-left: 8%; margin-top: 8%; margin-bottom: 5%;"><b>Air Quality
+                      Index</b></h2>
+                </div>
+                <div class="col-3">
+                  <h2 style="color: #ccc8da; font-size: 1.5em; margin-right: 15%; margin-top: 20%;"><b><i
+                        class="fas fa-map-marker-alt"></i>&nbsp;Howrah</b></h2>
+                </div>
               </div>
-              <div class="col-3">
-                <h2 style="color: #ccc8da; font-size: 1.5em; margin-right: 15%; margin-top: 20%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Howrah</b></h2>
+              <div class="row">
+                <div class="col-9">
+                  <h3 class="airQ"><i class="fas fa-wind"></i>&nbsp;Good</h3>
+                  <h5 style="color: #d3cede; margin-left: 10%; margin-bottom: 8%;"><b>A perfect day for a Walk!</b></h5>
+                </div>
+                <div class="col-3">
+                  <button class="rfBtn">Refresh</button>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-9">
-                <h3 class="airQ"><i class="fas fa-wind"></i>&nbsp;Good</h3>
-                <h5 style="color: #d3cede; margin-left: 10%; margin-bottom: 8%;"><b>A perfect day for a Walk!</b></h5>
-              </div>
-              <div class="col-3"> 
-                <button class="rfBtn">Refresh</button>
-              </div>
-            </div>
-            <div class="row">
-              <!-- PM2-->
-              <div class="styleVal" style="margin-left: auto;">
-                <div class="inCard"><br>
-                  <h5><b>9.3</b></h5>
-                  <h6><b>PM2</b></h6><br>
-                </div>    
-              </div>
-              <!-- PM10-->
-              <div class="styleVal">
-                <div class="inCard"><br>
-                  <h5><b>12.2</b></h5>
-                  <h6><b>PM10</b></h6><br>
-                </div>    
-              </div>
-              <!-- SO2-->
-              <div class="styleVal">
-                <div class="inCard"><br>
-                  <h5><b>4.8</b></h5>
-                  <h6><b>SO2</b></h6><br>
-                </div>    
-              </div>
-              <!-- NO2-->
-              <div class="styleVal">
-                <div class="inCard"><br>
-                  <h5><b>4.6</b></h5>
-                  <h6><b>NO2</b></h6><br>
-                </div>    
-              </div>
-              <!-- O2-->
-              <div class="styleVal">
-                <div class="inCard"><br>
-                  <h5><b>6.5</b></h5>
-                  <h6><b>O2</b></h6><br>
-                </div>    
-              </div>
-              <!-- CO-->
-              <div class="styleVal" style="margin-right: auto;">
-                <div class="inCard"><br>
-                  <h5><b>0.9</b></h5>
-                  <h6><b>CO</b></h6><br>
-                </div>    
+              <div class="row">
+                <!-- PM2-->
+                <div class="styleVal" style="margin-left: auto;">
+                  <div class="inCard"><br>
+                    <h5><b>9.3</b></h5>
+                    <h6><b>PM2</b></h6><br>
+                  </div>
+                </div>
+                <!-- PM10-->
+                <div class="styleVal">
+                  <div class="inCard"><br>
+                    <h5><b>12.2</b></h5>
+                    <h6><b>PM10</b></h6><br>
+                  </div>
+                </div>
+                <!-- SO2-->
+                <div class="styleVal">
+                  <div class="inCard"><br>
+                    <h5><b>4.8</b></h5>
+                    <h6><b>SO2</b></h6><br>
+                  </div>
+                </div>
+                <!-- NO2-->
+                <div class="styleVal">
+                  <div class="inCard"><br>
+                    <h5><b>4.6</b></h5>
+                    <h6><b>NO2</b></h6><br>
+                  </div>
+                </div>
+                <!-- O2-->
+                <div class="styleVal">
+                  <div class="inCard"><br>
+                    <h5><b>6.5</b></h5>
+                    <h6><b>O2</b></h6><br>
+                  </div>
+                </div>
+                <!-- CO-->
+                <div class="styleVal" style="margin-right: auto;">
+                  <div class="inCard"><br>
+                    <h5><b>0.9</b></h5>
+                    <h6><b>CO</b></h6><br>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <!----------------------------------------------------------- Second Card-->
-        <div class="row">
-          <div class="wCard" style="margin-left: 15%; margin-top: 5%">
-            <div style="margin-bottom: 5%;"><br>
-              <h1 style="color: #4a4162; margin-left: 5%; font-size: 2em;"><b>Rain Data</b></h1>
+          <!----------------------------------------------------------- Second Card-->
+          <div class="row">
+            <div class="wCard" style="margin-left: 15%; margin-top: 5%">
+              <div style="margin-bottom: 5%;"><br>
+                <h1 style="color: #4a4162; margin-left: 5%; font-size: 2em;"><b>Rain Data</b></h1>
+              </div>
+              <div class="row">
+                <div class="col-2" style="margin-left: 12%;">
+                  <div class="progress progress-bar-vertical">
+                    <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="height: 30%;"> </div>
+                  </div>
+                </div>
+                <div class="col-2">
+                  <div class="progress progress-bar-vertical">
+                    <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="height: 50%;"> </div>
+                  </div>
+                </div>
+                <div class="col-2">
+                  <div class="progress progress-bar-vertical">
+                    <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="height: 80%;"> </div>
+                  </div>
+                </div>
+                <div class="col-2">
+                  <div class="progress progress-bar-vertical">
+                    <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="height: 40%;"> </div>
+                  </div>
+                </div>
+                <div class="col-2">
+                  <div class="progress progress-bar-vertical">
+                    <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="height: 50%;"> </div>
+                  </div>
+                </div>
+                <div class="col-2"></div>
+              </div><br>
             </div>
-            <div class="row">
-              <div class="col-2" style="margin-left: 12%;">
-                <div class="progress progress-bar-vertical">
-                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 30%;"> </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="progress progress-bar-vertical">
-                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 50%;"> </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="progress progress-bar-vertical">
-                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 80%;"> </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="progress progress-bar-vertical">
-                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 40%;"> </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="progress progress-bar-vertical">
-                  <div class="progress-bar progress-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 50%;"> </div>
-                </div>
-              </div>
-              <div class="col-2"></div>
-            </div><br>
           </div>
-        </div>
-          
+
         </div>
         <!------------------------------------------------------------------- Third Card-->
         <div class="col-6">
           <div class="tCard">
             <div class="row">
-              <h3 style="color: #5d5570; margin-left: 8%; margin-top: 3%; margin-bottom: 8%;"><b>Sunrise&nbsp;&#38;&nbsp;Sunset</b></h3>
+              <h3 style="color: #5d5570; margin-left: 8%; margin-top: 3%; margin-bottom: 8%;">
+                <b>Sunrise&nbsp;&#38;&nbsp;Sunset</b></h3>
             </div>
 
             <div class="row, midCard">
               <div class="row">
-                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Kolkata</b></h3>
+                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i
+                      class="fas fa-map-marker-alt"></i>&nbsp;Kolkata</b></h3>
               </div>
               <div class="row">
                 <div class="col-6">
-                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun"
+                        style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
                   <h1 style="color: #8884d9; margin-left: 20%;"><b>4:40&nbsp;AM</b></h1>
                 </div>
                 <div class="col-6">
-                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon"
+                        style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
                   <h1 style="color: #8884d9; margin-left: 20%;"><b>6:53&nbsp;PM</b></h1><br>
                 </div>
               </div>
@@ -236,15 +247,18 @@
 
             <div class="row, midCard">
               <div class="row">
-                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i class="fas fa-map-marker-alt"></i>&nbsp;Tokyo</b></h3>
+                <h3 style="font-size: 1.5em; color: #615973; margin-left: 5%; margin-top: 4%; margin-bottom: 6%;"><b><i
+                      class="fas fa-map-marker-alt"></i>&nbsp;Tokyo</b></h3>
               </div>
               <div class="row">
                 <div class="col-6">
-                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-sun"
+                        style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunrise</b></h3>
                   <h1 style="color: #8884d9; margin-left: 20%;"><b>4:47&nbsp;AM</b></h1>
                 </div>
                 <div class="col-6">
-                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon" style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
+                  <h3 style="color: #615973; margin-left: 15%;"><b><i class="far fa-moon"
+                        style="color: #f6cc88; font-size: 2em;"></i>&nbsp;Sunset</b></h3>
                   <h1 style="color: #8884d9; margin-left: 20%;"><b>6:49&nbsp;PM</b></h1><br>
                 </div>
               </div>
@@ -252,7 +266,6 @@
           </div>
         </div>
       </div>
-
 
       <!----------------------------------------------------------- Navbar-->
       <div class="icon-bar" style="margin-top: auto; margin-bottom: auto;">
@@ -266,11 +279,9 @@
 
       </div>
 
-
       <div><br><br></div>
 
     </div>
-    
 
     <!--------------------------------------------------------------------------------------------------------- Right Portion-->
     <div class="col-3">
@@ -371,4 +382,5 @@
     </div>
   </div>
 </body>
+
 </html>
